[gd_scene load_steps=7 format=3 uid="uid://boa6m8ugpxsd1"]

[ext_resource type="Script" path="res://scenes/map/map.gd" id="1_0p7qx"]
[ext_resource type="Script" path="res://scenes/map/ScreenMap.gd" id="2_0udil"]
[ext_resource type="Theme" uid="uid://bb4uny0684isq" path="res://resources/theme_button_round.tres" id="3_5tfwt"]
[ext_resource type="Script" path="res://scenes/map/AllLevel.gd" id="4_ep8j2"]
[ext_resource type="Texture2D" uid="uid://ycmeqryvywsc" path="res://scenes/map/map.png" id="5_weho0"]
[ext_resource type="Script" path="res://scenes/map/Tracker.gd" id="6_3mlh5"]

[node name="Map1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0p7qx")

[node name="Khung" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="map" type="NinePatchRect" parent="Khung"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0

[node name="AllLevel" type="Node2D" parent="Khung/map"]
process_mode = 1
script = ExtResource("2_0udil")

[node name="MapSprite" type="Sprite2D" parent="Khung/map/AllLevel"]
position = Vector2(1248, 702)
texture = ExtResource("5_weho0")

[node name="Node" type="Node2D" parent="Khung/map/AllLevel"]

[node name="Level1" type="Button" parent="Khung/map/AllLevel/Node"]
offset_left = 810.0
offset_top = 749.0
offset_right = 850.0
offset_bottom = 789.0
theme = ExtResource("3_5tfwt")
theme_override_font_sizes/font_size = 18
text = "1"
script = ExtResource("4_ep8j2")
battlefield_id = "doggonamu"

[node name="Level2" type="Button" parent="Khung/map/AllLevel/Node"]
offset_left = 1581.0
offset_top = 391.0
offset_right = 1621.0
offset_bottom = 431.0
theme = ExtResource("3_5tfwt")
theme_override_font_sizes/font_size = 18
text = "2"
script = ExtResource("4_ep8j2")
battlefield_id = "caupuchia"

[node name="Level3" type="Button" parent="Khung/map/AllLevel/Node"]
offset_left = 519.0
offset_top = 116.0
offset_right = 559.0
offset_bottom = 156.0
theme = ExtResource("3_5tfwt")
theme_override_font_sizes/font_size = 18
text = "3"
script = ExtResource("4_ep8j2")
battlefield_id = "xichcau"

[node name="Level4" type="Button" parent="Khung/map/AllLevel/Node"]
offset_left = 895.0
offset_top = 196.0
offset_right = 935.0
offset_bottom = 236.0
theme = ExtResource("3_5tfwt")
theme_override_font_sizes/font_size = 18
text = "4"
script = ExtResource("4_ep8j2")
battlefield_id = "xichcau"

[node name="Level5" type="Button" parent="Khung/map/AllLevel/Node"]
offset_left = 295.0
offset_top = 351.0
offset_right = 335.0
offset_bottom = 391.0
theme = ExtResource("3_5tfwt")
theme_override_font_sizes/font_size = 18
text = "5"
script = ExtResource("4_ep8j2")

[node name="Level6" type="Button" parent="Khung/map/AllLevel/Node"]
offset_left = 1164.0
offset_top = 340.0
offset_right = 1204.0
offset_bottom = 380.0
theme = ExtResource("3_5tfwt")
theme_override_font_sizes/font_size = 18
text = "6"
script = ExtResource("4_ep8j2")

[node name="Tracker" type="Node2D" parent="Khung/map/AllLevel"]
script = ExtResource("6_3mlh5")

[node name="Camera2D" type="Camera2D" parent="Khung/map/AllLevel/Tracker"]
position_smoothing_enabled = true
position_smoothing_speed = 6.0

[node name="CanvasLayer" type="CanvasLayer" parent="Khung"]

[node name="Label" type="Label" parent="Khung/CanvasLayer"]
offset_left = 11.0
offset_top = 12.0
offset_right = 174.0
offset_bottom = 43.0
size_flags_horizontal = 2
theme_type_variation = &"LabelLarge"
text = "Hành tinh Doggo"

[node name="NutQuayLai" type="Button" parent="Khung/CanvasLayer"]
offset_top = 587.0
offset_right = 90.0
offset_bottom = 618.0
theme_override_font_sizes/font_size = 18
text = "< Quay lại"

[node name="NutTanCong" type="Button" parent="Khung/CanvasLayer"]
custom_minimum_size = Vector2(150, 50)
offset_left = 935.0
offset_top = 516.0
offset_right = 1085.0
offset_bottom = 566.0
size_flags_horizontal = 4
text = "Tấn công !
"

[node name="NutDoiDoiHinh" type="Button" parent="Khung/CanvasLayer"]
offset_left = 917.0
offset_top = 587.0
offset_right = 1095.0
offset_bottom = 614.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Đội hình: diamon dogs"

[connection signal="pressed" from="Khung/map/AllLevel/Node/Level1" to="Khung/map/AllLevel/Node/Level1" method="_on_level_pressed"]
[connection signal="pressed" from="Khung/map/AllLevel/Node/Level2" to="Khung/map/AllLevel/Node/Level2" method="_on_level_pressed"]
[connection signal="pressed" from="Khung/map/AllLevel/Node/Level3" to="Khung/map/AllLevel/Node/Level3" method="_on_level_pressed"]
[connection signal="pressed" from="Khung/map/AllLevel/Node/Level4" to="Khung/map/AllLevel/Node/Level4" method="_on_level_pressed"]
[connection signal="pressed" from="Khung/map/AllLevel/Node/Level5" to="Khung/map/AllLevel/Node/Level5" method="_on_level_pressed"]
[connection signal="pressed" from="Khung/map/AllLevel/Node/Level6" to="Khung/map/AllLevel/Node/Level6" method="_on_level_pressed"]
[connection signal="pressed" from="Khung/CanvasLayer/NutQuayLai" to="." method="_on_quay_lai_pressed"]
[connection signal="pressed" from="Khung/CanvasLayer/NutTanCong" to="." method="_on_nut_tan_cong_pressed"]
[connection signal="pressed" from="Khung/CanvasLayer/NutDoiDoiHinh" to="." method="_on_doi_doi_hinh_pressed"]
